2004-11-08  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\pdfmakeoutlines): in the first run through the
	toc, define \thischapnum...\thissubsecnum as 0, rather than \empty.
	This is so \expnumber doesn't end up trying to expand
	\csname sec\empty\endcsname, i.e., \sec, which is the secant function.
	Report from: Oliver Beck, help-texinfo, 8 Nov 2004 08:05:55 +0100.

2004-11-07  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (main) [LC_MESSAGES]: #ifdef the setlocale
	using LC_MESSAGES.  From te, 6 Nov 2004 23:36:10 +0100.

2004-11-06  Karl Berry  <karl@gnu.org>

	* lib/Makefile.am (libtxi_a_SOURCES): add strdup.h.
	Report from: Thomas Esser <te@dbs.uni-hannover.de>,
	6 Nov 2004 18:11:51 +0100.

2004-11-01  Karl Berry  <karl@gnu.org>

	* makeinfo/xref.c (cm_xref): don't include the external file name
	in the HTML output, since it's pretty traditional not to
	distinguish internal and external links in HTML, and it disturbs
	the flow of reading.
	From: Han-Wen Nienhuys <hanwen@xs4all.nl>, 31 Oct 2004 00:13:36 +0200.
	(For lilypond.)

2004-10-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\setmultitablespacing): just let \multistrut be
	the same as \strut.  Its previous computation was wrong.
	See bug-texinfo report from Werner Lemberg, 31 Oct 2004 12:52:20 +0100.

2004-10-22  Stepan Kasal  <kasal@ucw.cz>

	* info/Makefile.am (generated_sources): Add dependencies defining
	  a total order on the files, to prevent race conditions with
	  parallel make.
	  Move the code about generated sources to the end of the file.

2004-10-20  Stepan Kasal  <kasal@ucw.cz>

	* info/Makefile.am (doc.c, key.c, funs.h): Don't distribute them.
	  of these three files.
	(ginfo_SOURCES, nodist_ginfo_SOURCES): Move files.
	(infokey_SOURCES, nodist_infokey_SOURCES): Likewise.
	(DISTCLEANFILES): Include generated_sources.

2004-10-20  Stepan Kasal  <kasal@ucw.cz>

	BUILT_SOURCES is a special variable for a hack to supplement